# OpenROAD-flow-scripts

./: .bazelignore  .bazelrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .yamllint  AGENTS.md  BUILD  BUILD.bazel  Dockerfile  Jenkinsfile  LICENSE_BUILD_RUN_SCRIPTS  MODULE.bazel  Makefile  README.md  README_TO_RUN_WITH_DREAMPLACE  bazel-orfs.md  build_openroad.sh  claude.sh  dev_env.sh  empty  env.sh  flake.nix  input and output operations  openroad-visibility.patch  setup.sh  setup_env.harsh  setup_env.sh  setup_env_docker.sh  setup_env_manual.sh  tclint.toml  test  testing  yamlfix.toml
bazel/: 0001-orfs_design-accept-config-mk-explicitly-drop-exports.patch  0001-orfs_design-add-user_sources.patch  0002-orfs_design-add-local_arguments-to-drop-helper-vars.patch  BUILD  BUILD.bazel  README.md  config_mk_parser.py  config_mk_parser_test.py  designs.bzl  install.sh  orfs.bzl
bazel/bazel-orfs-patches/: 0001-stages-register-bazel-injected-vars-in-validator.patch  0002-synth_partition-fix-SYNTH_SKIP_KEEP-truthy-check.patch  0003-synth_partition-parse-kept_modules-json-without-greedy-sed.patch  0004-orfs_design-forward-user_arguments-to-orfs_flow.patch
bazel/slang-compat/: README
bazel/yosys-patches/: 0001-Replace-deprecated-Tcl-API-to-fix-use-after-free.patch
flow/: .bazelrc  .bazelversion  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  Makefile  Makefile.no_drt  Makefile.py  Makefile_asap7tweaks  README.  README.md  mark_hier_stop_modules.tcl  mempool_yosys.tcl  metrics.html  metrics.json  or  requirements_lock.txt  run_chameleon_hier.sh  settings.mk  synthesis_timing.tcl
flow/custom_macro/: custom_macro_place.tcl
flow/designs/: .gitignore  1  BUILD  BUILD.bazel  README.md  bigger_is_better_metrics.json  black_parrot_nangate45.mk  black_parrot_tsmc65lp.mk  bp_be_top_tsmc65lp.mk  bp_fe_top_nangate45.mk  bp_fe_top_tsmc65lp.mk  dashboardMetricsComparison.json  design.bzl  dynamic_node_nangate45.mk  dynamic_node_tsmc65lp.mk  gcd_gf14.mk  gcd_tsmc65lp.mk  harness.mk  ibex_nangate45.mk  ibex_tsmc65lp.mk  jpeg_nangate45.mk  jpeg_tsmc65lp.mk  qor.bzl  swerv_nangate45.mk  swerv_tsmc65lp.mk  swerv_wrapper_tsmc65lp.mk  tinyRocket_tsmc65lp.mk  vb_tsmc65lp.mk
flow/designs/asap7/: BUILD  README.md
flow/designs/gf12/: README.md
flow/designs/gf14/: aes.mk  aes_rules.json  bp_dual.mk  bp_quad.mk  bp_single.mk  bsg_ac_black_parrot_quad_core_v0.mk  bsg_ac_black_parrot_single_core_v0.mk  bsg_ac_io_complex_loopback.mk  bsg_ac_padring.mk  bsg_loopback.mk  bsg_loopback_rules.json  bsg_padring.mk  dynamic_node.mk  gcd.mk  ibex.mk  jpeg.mk  swerv.mk
flow/flow/: Makefile
flow/scripts/: BUILD.bazel  DREAMPlace_ref.json  ICeWall.tcl  README.md  abc_retime.script  abc_speed.script  abc_speed_gia_only.script  addDummyToLef.py  add_routing_blk.tcl  analyze_pdn_ir.tcl  buffer.tcl  cdl.tcl  config.sh  cts.tcl  cts_legalize.tcl  declared_variables.py  def2odb.tcl  defaults.py  defaults.sh  defaults.yaml  deleteNonClkNets.tcl  deletePowerNets.tcl  deleteRoutingObstructions.tcl  density_fill.tcl  detail_place.tcl  detail_route.tcl  env.sh  env.tcl  environment.yaml  erase_io.tcl  escape.sh  fastroute.rsyn  fillcell.tcl  final_connect.tcl  final_outputs.tcl  final_report.tcl  fixIoPins.py  floorplan-metrics.tcl  floorplan.tcl  floorplan_debug_macros.tcl  (+100 more)
flow/test/: .gitignore  BUILD  at_test_helper.sh  autotuner_report.py  bp.sh  conftest.py  core_tests.sh  fake_klayout  fake_openroad  fake_yosys  gf14.sh  gf14_gcd.sh  nodes.txt  openroad.sh  smoke.sh  test-do-stage.sh  test_autotuner.sh  test_delta_debug.sh  test_eqy_use_lib.sh  test_fast_autotuner.sh  test_genElapsedTime.py  test_generate_klayout_tech.py  test_helper.py  test_helper.sh  test_idempotent.sh  test_make_issue.sh  test_outoftree.sh  test_platform_config.py  test_run_command.py  tiny_tests.sh
flow/tutorials/: README.md
flow/util/: BUILD  BUILD.bazel  README.md  addDummyToLef.py  appendStatsToDb.py  autotuner-job-example.yaml  autotuner-sweep.json  autotuner.py  calBuffer.py  calPath.py  checkMetadata.py  compare_rc_script.tcl  convertDrc.py  correlateRC.py  createGallery.py  def2gds.py  def2stream.py  distributed.py  distributed_grdr.py  docker_shell  drilldown_idempotency.sh  executeParallel.sh  explore_route.tcl  fixIoPins.py  gallery.json  gdsFill.py  genAllRuleFiles.sh  genElapsedTime.py  genMassive.py  genMetadata.py  genMetrics.py  genMetricsGrep.py  genMetricsJSON.py  genMetrics_21.py  genMetrics_test.py  genReport.py  genReportTable.py  genRuleFile.py  generate-vars.sh  generate_klayout_tech.py  (+43 more)
patches/bazel-orfs/: 0001-add-yosys-prefix-tar-packaging.patch  0001-flow.bzl-pull-synth-into-generate_metadata-data-deps.patch  0001-render_gds-monkey-patch-PDK_CONFIGS-not-gdsii_use_custom_config.patch  0001-synth-support-OpenROAD-SYN-engine-SYNTH_USE_SYN-1-an.patch  0002-add-orfs_openroad_synth-rule-and-macro.patch  0002-blender.bzl-export-blender_supports_pdk-predicate.patch  0002-flow-emit-metadata-test-update-chain-for-synthesis-o.patch  0003-add-orfs_canon_verilog-rule.patch  0003-orfs_design.bzl-forward-blender-silently-skip-unsupp.patch  0003-update-copy-only-rules.json-in-the-orfs_update-scrip.patch  0004-design-caller-extension-hook-for-per-design-status-t.patch  0004-environment.bzl-pull-src-OrfsDepInfo.files-into-sour.patch  0005-flow-synthesis-only-QoR-checks-the-synth-subset-of-t.patch  0005-render_gds-log-phase-VmRSS-and-capture-op-tracebacks.patch  BUILD.bazel  lec-0001-build-time-lec-check-and-netlist-extraction.patch
patches/openroad/: 0001-sta-register-new-instance-pin-vertices-as-endpoints.patch  0002-drt-make-incremental-design-updates-match-a-fresh-read.patch  0003-drt-do-not-duplicate-bterm-access-points.patch  BUILD.bazel
patches/openroad-deps/: BUILD.bazel
tools/AutoTuner/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cli.yaml  docker-compose.yml  installer.sh  pyproject.toml  requirements-dev.txt  requirements-ray.txt  requirements-vizier.txt  requirements.in  requirements.txt  requirements_vizier.txt  setup.py  setup.sh
(+2283 files in other folders)
