"""ORFS bazel setup."""

module(
    name = "orfs",
    version = "0.0.1",
)

# --- Regular dependencies (propagated to downstream consumers) ---

bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "rules_shell", version = "0.6.1")

# --- Dev dependencies (only honoured when @orfs is the root module) ---
#
# When @orfs is consumed as a non-root dep (e.g. by tools/OpenROAD), the
# downstream module brings its own openroad/qt-bazel/bazel-orfs/yosys-slang
# pins and orfs.default() configuration. Marking everything below as
# dev_dependency = True makes those declarations no-ops in that case, so
# our MODULE.bazel doesn't need to be patched at non-root consumption
# time.

bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)

# openroad is normally consumed straight from the tools/OpenROAD
# submodule via local_path_override. While OpenROAD fixes are carried
# as patches in //patches/openroad (local_path_override does not accept
# patches), it is fetched via git_override instead, pinned to the exact
# commit the submodule records so make (submodule) and bazel (fetched +
# patched) build the same base. Note that bazel builds the fetched
# source, not the live submodule tree, while this override is in place;
# revert to local_path_override when the patches land upstream.
#
# patches/openroad/0001-sta-register-new-instance-pin-vertices-as-endpoints.patch:
# pins of a freshly created instance that are never connected (eg the
# dangling outputs of CTS dummy-load buffers) never enter the STA
# endpoint set, so their requireds are never seeded and a propagated
# clock arrival yields a bogus negative net slack in the process that
# inserted them — resistance-aware global routing then routes
# differently in a single-process flow than in a stage-per-process
# flow. Applies to the src/sta submodule content (init_submodules).
bazel_dep(name = "openroad", dev_dependency = True)
git_override(
    module_name = "openroad",
    commit = "f4e5e40f4755f135fea8e567c8c6822136b48729",
    init_submodules = True,
    patch_strip = 1,
    patches = [
        "//patches/openroad:0001-sta-register-new-instance-pin-vertices-as-endpoints.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel", dev_dependency = True)
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "bazel-orfs", dev_dependency = True)
bazel_dep(name = "bazel-orfs-verilog", dev_dependency = True)

BAZEL_ORFS_COMMIT = "6ebadeb4be5c9ada103081c9a5e668c014126616"

BAZEL_ORFS_REMOTE = "https://github.com/The-OpenROAD-Project/bazel-orfs.git"

# To bump version, run: bazelisk run @bazel-orfs//:bump
git_override(
    module_name = "bazel-orfs",
    commit = BAZEL_ORFS_COMMIT,
    remote = BAZEL_ORFS_REMOTE,
)

git_override(
    module_name = "bazel-orfs-verilog",
    commit = BAZEL_ORFS_COMMIT,
    remote = BAZEL_ORFS_REMOTE,
    strip_prefix = "verilog",
)

# yosys-slang is not on BCR. Pin to a commit on povik/yosys-slang master
# that has the upstream Bazel build (povik/yosys-slang#310) and the
# slang.so visibility fix (povik/yosys-slang#311). Submodules pull in
# vendored slang and fmt sources.
bazel_dep(name = "yosys-slang", dev_dependency = True)
git_override(
    module_name = "yosys-slang",
    commit = "7753ea70431d85929292b90c33b32f6dbdb3b048",
    init_submodules = True,
    remote = "https://github.com/povik/yosys-slang.git",
)

# --- Extensions ---

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# sv-lang (via tools/OpenROAD) pulls in rules_pycross, whose toolchain
# extension fails on Python 3.8 (transitively registered via or-tools ->
# pybind11_abseil, dropped from rules_python 2.0.0's MINOR_MAPPING).
# pycross.configure_environments is root-honored only, so the workaround
# must be mirrored here from tools/OpenROAD/MODULE.bazel.
bazel_dep(name = "rules_pycross", version = "0.8.1", dev_dependency = True)

pycross = use_extension(
    "@rules_pycross//pycross/extensions:pycross.bzl",
    "pycross",
    dev_dependency = True,
)
pycross.configure_environments(python_versions = ["3.13"])

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "orfs-pip",
    python_version = "3.13",
    requirements_lock = "//flow:util/requirements_lock.txt",
)
use_repo(pip, "orfs-pip")

orfs = use_extension(
    "@bazel-orfs//:extension.bzl",
    "orfs_repositories",
    dev_dependency = True,
)
orfs.default(
    # Expose the yosys-slang plugin via YOSYS_PLUGIN_PATH so
    # SYNTH_HDL_FRONTEND=slang works for ibex, cva6, uart, etc.
    yosys_plugins = ["@yosys-slang//src/yosys_plugin:slang.so"],
)
use_repo(orfs, "config")
use_repo(orfs, "gnumake")
use_repo(orfs, "orfs_variable_metadata")

# Auto-generate orfs_flow() targets from config.mk files.
# See flow/README.md for usage.
orfs_designs = use_repo_rule("@bazel-orfs//private:designs.bzl", "orfs_designs")

orfs_designs(
    name = "orfs_designs",
    designs_dir = "//flow/designs:BUILD",
    platforms = [
        "asap7",
        "gf180",
        "ihp-sg13g2",
        "nangate45",
        "sky130hd",
        "sky130hs",
    ],
)
