load("@bazel-orfs//:openroad.bzl", "orfs_pdk")

exports_files(
    ["scripts/variables.yaml"],
    visibility = ["//visibility:public"],
)

# files shared between scripts/synth.sh and scripts/flow.sh steps
MAKEFILE_SHARED = [
    "scripts/*.py",
    "scripts/*.sh",
    "scripts/*.yaml",
    "scripts/*.mk",
]

# makefile and scripts used by script/synth.sh steps
filegroup(
    name = "makefile_yosys",
    srcs = ["Makefile"],
    data = glob(MAKEFILE_SHARED + [
        "scripts/*.script",
        "scripts/util.tcl",
        "scripts/synth*.tcl",
        "scripts/synth*.v",
        "platforms/common/**/*.v",
    ]) + [
        "//flow/util:makefile_yosys",
    ],
    visibility = ["//visibility:public"],
)

# makefile and scripts used in the scripts/flow.sh steps
filegroup(
    name = "makefile",
    srcs = ["Makefile"],
    data = glob(MAKEFILE_SHARED + [
        "scripts/*.tcl",
        "platforms/common/**/*.v",
    ]) + [
        "//flow/util:makefile",
    ],
    visibility = ["//visibility:public"],
)

[orfs_pdk(
    name = pdk,
    srcs = glob([
        "platforms/{pdk}/**/*.{ext}".format(
            ext = ext,
            pdk = pdk,
        )
        for ext in [
            "gds",
            "lef",
            "lyp",
            "lyt",
            "mk",
            "rules",
            "tcl",
            "v",
        ] + {
            "asap7": ["cfg", "json", "lib.gz", "sdc"],
            "gf180": ["cfg", "layermap", "lyt_generic"],
            "ihp-sg13g2": ["json"],
            "nangate45": ["cfg"],
            "sky130hd": ["json", "tlef"],
            "sky130hs": ["json", "tlef"],
        }.get(pdk, [])
    ] + [
        "platforms/common/**/*.v",
    ]),
    libs = glob([
        "platforms/{pdk}/**/*.{ext}".format(
            pdk = pdk,
            ext = ext,
        )
        for ext in {
            "asap7": ["lib", "lib.gz"],
            "gf180": ["lib.gz"],
        }.get(pdk, ["lib"])
    ]),
    config = ":platforms/{pdk}/config.mk".format(pdk = pdk),
    visibility = ["//visibility:public"],
) for pdk in [
    "asap7",
    "gf180",
    "ihp-sg13g2",
    "nangate45",
    "sky130hd",
    "sky130hs",
]]
