"""ORFS bazel setup."""

module(
    name = "orfs",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "41354d9de46816b79858e43baadf701cf7e997e5",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

# Read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# TL;DR
#
# 1. uncomment below
# 2. comment git_override() above
#
#local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
#)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "orfs-pip",
    python_version = "3.12",
    requirements_lock = "//:util/requirements_lock.txt",
)
use_repo(pip, "orfs-pip")

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    # Check out the version you want to test and make any modifications locally:
    #
    # ./build_openroad.sh --no_init
    #
    # Comment out "sha256" below, not available for local docker images
    # and update "image" to point to the local image.

    # Official image https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:v3.0-2707-g044183f3",
    # image = "gcr.io/ascenium/orfs-megaboom/flow-ubuntu22.04-builder:3d2c3d-2",
    sha256 = "34db776930937b94b22f96b68feea87381de70727d12efc47f342b88c8cb3db6",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
