"""ORFS bazel setup."""

module(
    name = "orfs",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "48cc8783f285d2a274b1613004dcbea21195f49c",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

# Read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# TL;DR
#
# 1. uncomment below
# 2. comment git_override() above
#
#local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
#)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "orfs-pip",
    python_version = "3.12",
    requirements_lock = "//:util/requirements_lock.txt",
)
use_repo(pip, "orfs-pip")

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    # Check out the version you want to test and make any modifications locally:
    #
    # ./build_openroad.sh --no_init
    #
    # Comment out "sha256" below, not available for local docker images
    # and update "image" to point to the local image.

    # Official image https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:v3.0-2734-gcf6f0417",
    # Use local files instead of docker image
    makefile = "//:makefile",
    pdk = "//:asap7",
    makefile_yosys = "//:makefile_yosys",
    # TODO once openroad is switched to MODULE.bazel, use
    # local_path_override(module_name = "openroad", path = "../tools/OpenROAD")
    # to point to the local openroad Bazel module instead of
    # getting the openroad binary from the docker image.
    openroad = "@docker_orfs//:openroad",
    sha256 = "ef685898a5e3a2db7166c55238275adcf2dbec7ee0a7eb895a78657bcc27220a",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
