"""ORFS bazel setup."""

module(
    name = "orfs",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")

# To bump version, run: bazelisk run @bazel-orfs//:bump
git_override(
    module_name = "bazel-orfs",
    commit = "9b00feceb3f2d695787c45708131a5e39e30d08e",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

# Read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# TL;DR
#
# 1. uncomment below
# 2. comment git_override() above
#
#local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
#)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "orfs-pip",
    python_version = "3.12",
    requirements_lock = "//:util/requirements_lock.txt",
)
use_repo(pip, "orfs-pip")

# HACK! While we're waiting for OpenROAD to switch to bzlmod
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "openroad",
    build_file_content = """
exports_files(["openroad"],
visibility = ["//visibility:public"],
)
filegroup(
    name = "all",
    data = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
""",
    path = "../tools/OpenROAD/bazel-out/k8-opt/bin",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")

# To bump version, run: bazelisk run @bazel-orfs//:bump
orfs.default(
    # Check out the version you want to test and make any modifications locally:
    #
    # ./build_openroad.sh --no_init
    #
    # Comment out "sha256" below, not available for local docker images
    # and update "image" to point to the local image.

    # Official image https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:v3.0-2784-g6bb4f353",
    # Use local files instead of docker image
    makefile = "//:makefile",
    makefile_yosys = "//:makefile_yosys",
    # TODO once openroad is switched to MODULE.bazel, use
    # local_path_override(module_name = "openroad", path = "../tools/OpenROAD")
    # to point to the local openroad Bazel module instead of
    # getting the openroad binary from the docker image, supports GUI.
    #
    # openroad = "@docker_orfs//:openroad",

    # Use locally built OpenROAD while we're waiting for OpenROAD
    # to bzlmod, no GUI for now.
    #
    # cd ../tools/OpenROAD
    # bazelisk build -c opt :openroad
    openroad = "//test:openroad",
    pdk = "//:asap7",
    sha256 = "67535c7e4a1bdf6adc98eebc3a17988c80674760293887447e750dd526fe6427",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
