load("@orfs-pip//:requirements.bzl", "requirement")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

exports_files(["open_plots.sh"])

py_binary(
    name = "plot_congestion",
    srcs = ["plot_congestion.py"],
    main = "plot_congestion.py",
    visibility = ["//visibility:public"],
    deps = [requirement("matplotlib")],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

MAKEFILE_SHARED = [
    "*.mk",
]

# for scripts/flow.sh steps
filegroup(
    name = "makefile",
    srcs = glob(MAKEFILE_SHARED + [
        "*.pl",
        "*.py",
        "*.sh",
    ]),
    visibility = ["//visibility:public"],
)

# for scripts/synth.sh steps
filegroup(
    name = "makefile_yosys",
    srcs = glob(MAKEFILE_SHARED) + [
        "mergeLib.pl",
        "preprocessLib.py",
    ],
    visibility = ["//visibility:public"],
)
